namespace LocMp.Order.Domain.Enums;

public enum CourierApplicationStatus
{
    Pending = 1,
    Approved = 2,
    Rejected = 3,
    Withdrawn = 4
}