namespace LocMp.Order.Domain.Enums;

public enum DeliveryType
{
    Pickup = 1,
    Delivery = 2
}