namespace LocMp.Order.Domain.Enums;

public enum DisputeStatus
{
    Open = 1,
    Resolved = 2,
    Closed = 3
}