namespace LocMp.Order.Domain.Enums;

public enum PaymentStatus
{
    Pending = 1,
    Paid = 2,
    Refunded = 3
}