@startuml order-service
title <size:16><b>OrderService</b></size>\n<color:#555>Диаграмма классов (schema: orders)</color>

' ─── Глобальные настройки стиля ──────────────────────────────────────────────
skinparam defaultFontName "Segoe UI", Arial, sans-serif
skinparam defaultFontSize 13
skinparam roundcorner 10
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 60
skinparam ranksep 70

skinparam class {
    BackgroundColor White
    HeaderBackgroundColor #EDE7F6
    BorderColor #7B1FA2
    BorderThickness 1.2
    ArrowColor #7B1FA2
    ArrowThickness 1.2
    AttributeFontColor #2C3E50
}

skinparam enum {
    BackgroundColor White
    HeaderBackgroundColor #F3E5F5
    BorderColor #6A1B9A
    BorderThickness 1.2
}

skinparam note {
    BackgroundColor #FFF9C4
    BorderColor #FBC02D
    FontColor #4E342E
    BorderThickness 1.2
    roundcorner 6
}

skinparam stereotypeCBackgroundColor #EDE7F6
skinparam stereotypeABackgroundColor #FDEBD0
skinparam stereotypeEBackgroundColor #D5F5E3

' ─── Enums ───────────────────────────────────────────────────────────────────

enum OrderStatus {
    Pending        = 1
    Confirmed      = 2
    ReadyForPickup = 3
    InDelivery     = 4
    Completed      = 5
    Cancelled      = 6
    Disputed       = 7
    ReadyForCourier = 8
}

enum DeliveryType {
    Pickup   = 1
    Delivery = 2
}

enum CourierApplicationStatus {
    Pending   = 1
    Approved  = 2
    Rejected  = 3
    Withdrawn = 4
}

enum PaymentStatus {
    Pending
    Paid
    Refunded
}

enum DisputeStatus {
    Open
    Resolved
    Closed
}

enum DisputeOutcome {
    BuyerFavored
    SellerFavored
}

enum DisputeType {
    NotDelivered 
    WrongItem    
    DefectiveItem
    CourierIssue 
    Other        
}

' ─── Cart ────────────────────────────────────────────────────────────────────

class Cart {
    + Id : Guid <<PK>>
    + UserId : Guid <<logical ref: Identity>>
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
    + ExpiresAt : DateTimeOffset
}

class CartItem {
    + Id : Guid <<PK>>
    + CartId : Guid <<FK>>
    ..snapshot на момент добавления..
    + ProductId : Guid <<logical ref: Catalog>>
    + ProductName : string <<snapshot>>
    + SellerId : Guid <<logical ref: Identity>>
    + SellerName : string <<snapshot>>
    + ShopId : Guid? <<logical ref: Catalog>>
    + ShopName : string? <<snapshot>>
    + Price : decimal <<snapshot>>
    + Quantity : int
    + UpdatedAt : DateTimeOffset?
}

' ─── Order Aggregate ─────────────────────────────────────────────────────────

class Order <<aggregate root>> {
    + Id : Guid <<PK>>
    + CheckoutId : Guid? <<группирует заказы одного checkout>>
    ..участники — только Guid, нет FK..
    + BuyerId : Guid <<logical ref: Identity>>
    + SellerId : Guid <<logical ref: Identity>>
    + SellerName : string <<snapshot>>
    + ShopId : Guid? <<logical ref: Catalog>>
    + ShopName : string? <<snapshot>>
    ..статус и тип..
    + Status : OrderStatus
    + DeliveryType : DeliveryType
    + IsSellerDelivery : bool
    + PaymentStatus : PaymentStatus
    ..финансы..
    + TotalAmount : decimal
    + BuyerComment : string?
    ..геолокация магазина (снепшот)..
    + ShopLocation : Point? <<geography(Point,4326)>>
    + ShopServiceRadiusMeters : int?
    ..временные метки..
    + CreatedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
    + CompletedAt : DateTimeOffset?
}

class OrderItem {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK>>
    ..snapshot товара на момент заказа..
    + ProductId : Guid <<logical ref: Catalog>>
    + ProductName : string <<snapshot>>
    + ProductDescription : string? <<snapshot>>
    + MainPhotoUrl : string? <<snapshot>>
    + ShopId : Guid? <<logical ref: Catalog>>
    + ShopName : string? <<snapshot>>
    + UnitPrice : decimal <<snapshot>>
    + Quantity : int
    + Subtotal : decimal
}

class OrderStatusHistory {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK>>
    + FromStatus : OrderStatus?
    + ToStatus : OrderStatus
    + Comment : string?
    + ChangedById : Guid <<logical ref: Identity>>
    + ChangedAt : DateTimeOffset
}

class DeliveryAddress {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK, unique>>
    ..адрес доставки..
    + City : string
    + Street : string
    + HouseNumber : string
    + Apartment : string?
    + Entrance : string?
    + Floor : int?
    + Location : Point? <<geography(Point,4326)>>
    ..контакты..
    + RecipientName : string <<snapshot>>
    + RecipientPhone : string <<snapshot>>
}

class CourierApplication {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK>>
    + CourierId : Guid <<logical ref: Identity>>
    + CourierName : string <<snapshot>>
    + CourierPhone : string <<snapshot>>
    + CourierLocation : Point? <<geography(Point,4326)>>
    + DistanceToShopMeters : double?
    + Status : CourierApplicationStatus
    + AppliedAt : DateTimeOffset
    + UpdatedAt : DateTimeOffset?
    ' UNIQUE INDEX (OrderId, CourierId)
}

class CourierAssignment {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK, unique>>
    + CourierId : Guid <<logical ref: Identity>>
    + CourierName : string <<snapshot>>
    + CourierPhone : string <<snapshot>>
    + AssignedAt : DateTimeOffset
    + PickedUpAt : DateTimeOffset?
    + DeliveredAt : DateTimeOffset?
}

class Dispute {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK, unique>>
    + InitiatorId : Guid <<logical ref: Identity>>
    + DisputeType : DisputeType
    + Reason : string
    + Status : DisputeStatus
    + Outcome : DisputeOutcome?
    + Resolution : string?
    + CreatedAt : DateTimeOffset
    + ResolvedAt : DateTimeOffset?
}

class OrderPhoto {
    + Id : Guid <<PK>>
    + OrderId : Guid <<FK>>
    + UploadedById : Guid <<logical ref: Identity>>
    + StorageUrl : string <<MinIO bucket: order-media>>
    + ObjectKey : string <<MinIO object key>>
    + MimeType : string
    + FileSize : long
    + SortOrder : int
    + UploadedAt : DateTimeOffset
}

class DisputePhoto {
    + Id : Guid <<PK>>
    + DisputeId : Guid <<FK>>
    + UploadedById : Guid <<logical ref: Identity>>
    + StorageUrl : string <<MinIO bucket: order-media>>
    + ObjectKey : string <<MinIO object key>>
    + MimeType : string
    + FileSize : long
    + SortOrder : int
    + UploadedAt : DateTimeOffset
}

' ─── Relationships ────────────────────────────────────────────────────────────

Cart "1" *-down- "0..*" CartItem : содержит >

Order "1" *-down- "1..*" OrderItem : состоит из >
Order "1" *-right- "1..*" OrderStatusHistory : история >
Order "1" *-down- "0..1" DeliveryAddress : адрес >
Order "1" *-left- "0..*" CourierApplication : заявки курьеров >
Order "1" *-left- "0..1" CourierAssignment : назначенный курьер >
Order "1" *-right- "0..1" Dispute : спор >
Order "1" *-down- "0..*" OrderPhoto : фото к заказу >
Dispute "1" *-down- "0..*" DisputePhoto : фото к спору >

Order ..> OrderStatus
Order ..> DeliveryType
Order ..> PaymentStatus
CourierApplication ..> CourierApplicationStatus
Dispute ..> DisputeStatus
Dispute ..> DisputeOutcome
Dispute ..> DisputeType

' ─── Notes ───────────────────────────────────────────────────────────────────

note right of OrderItem
  SNAPSHOT PATTERN:
  Цена и название товара копируются
  в момент оформления и не меняются
  при изменении каталога.

  ProductId хранится только
  для аналитики — FK в catalog БД нет.
end note

note right of Order
  CheckoutId объединяет несколько заказов
  (от разных продавцов), созданных за один
  Checkout — для корзины с товарами нескольких
  продавцов.

  Конечный автомат статусов:

  Pending ──► Confirmed
           ──► Cancelled
  Confirmed ──► ReadyForPickup   (Pickup)
            ──► ReadyForCourier  (Delivery, ждём курьера)
            ──► InDelivery       (продавец сам везёт)
            ──► Cancelled
  ReadyForCourier ──► InDelivery (курьер забрал)
                  ──► Cancelled
  ReadyForPickup  ──► Completed
  InDelivery      ──► Completed
  Confirmed+      ──► Disputed
  Disputed ──► Cancelled  (BuyerFavored: возврат стока)
           ──► Completed  (SellerFavored: сделка засчитана)

  FromStatus = null в первой записи
  OrderStatusHistory (создание заказа).
end note

note right of DeliveryAddress
  Создаётся только при
  DeliveryType = NeighborCourier.
  Location (PostGIS): для поиска
  ближайшего свободного курьера.
  RecipientName/Phone — снепшот,
  т.к. пользователь может сменить данные.
end note

note right of CourierApplication
  Курьер подаёт заявку с геолокацией.
  DistanceToShopMeters вычисляется через
  ST_Distance(geography, geography) в SQL.
  UNIQUE INDEX (OrderId, CourierId):
  повторная заявка после Withdrawn/Rejected
  обновляет существующую строку.
  При одобрении одной заявки все остальные
  Pending автоматически → Rejected.
  Таймаут: 15 мин без PickedUpAt →
  назначение удаляется, заявка → Pending.
end note

note bottom of CourierAssignment
  Создаётся при одобрении CourierApplication.
  UNIQUE по OrderId — один курьер на заказ.
  PickedUpAt: курьер забрал у продавца.
  DeliveredAt: курьер доставил покупателю.
end note


' ─── Сводная таблица сущностей ───────────────────────────────────────────────

legend bottom
  <b>Таблицы сервиса (schema: orders)</b>
  |= Класс C# |= Таблица в БД |= Описание |
  | Cart | Carts | Корзина покупателя (TTL 24ч, чистится фоновым сервисом) |
  | CartItem | CartItems | Позиция корзины — снепшот цены и названия товара |
  | Order | Orders | Агрегат заказа — конечный автомат статусов |
  | OrderItem | OrderItems | Позиция заказа — неизменяемый снепшот товара на момент покупки |
  | OrderStatusHistory | OrderStatusHistory | Полный аудит переходов статусов заказа |
  | DeliveryAddress | DeliveryAddresses | Снепшот адреса и контактов получателя (только для курьерской доставки) |
  | CourierApplication | CourierApplications | Заявка курьера на доставку (UNIQUE OrderId+CourierId, с геолокацией) |
  | CourierAssignment | CourierAssignments | Назначение курьера на заказ (1:1, создаётся при одобрении заявки) |
  | Dispute | Disputes | Спор по заказу с историей разрешения (1:1) |
  | OrderPhoto | OrderPhotos | Фото к заказу (StorageUrl → MinIO bucket: order-media) |
  | DisputePhoto | DisputePhotos | Фото к спору (StorageUrl → MinIO bucket: order-media) |
endlegend

@enduml
